--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Nunito', sans-serif;
   color: #97C30A;
-  background-color:dimgrey;
+  background-color:black;
 }
 
 h1, h2, h3 {
