--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,19 @@ p {
 #image-container {
   display: flex;
   justify-content: center;
-  margin-left: -2999px;
-  transition: all 1.4s;
+  transition: all 0.2s;
 }
 
+.left {
+  margin-left: -5000px;
+}
 
-#image-container.centered {
-  margin-left: 0px;
+#chart-container {
+  transition: all 1s;
+}
+
+.fade {
+  opacity: 0;
 }
 
 nav {
@@ -51,13 +57,3 @@ button {
 #market {
   background-color: darkred;
 }
-
-table {
-  border-collapse: collapse;
-  margin-left: auto;
-  margin-right: auto;
- }
-
-table, th, td {
-  padding: 1px 20px;
- }
